# gls

./: CMakeLists.txt  GLS.files  GLS.includes  README.md
doc/: CMakeLists.txt
include/gls/: gls_version.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/gls/: CMakeLists.txt  gls.c  gls.glsl.h
